--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,18 @@
           <artifactId>validation-api</artifactId>
           <version>2.0.1.Final</version>
       </dependency>
+      <dependency>
+          <groupId>org.junit.jupiter</groupId>
+          <artifactId>junit-jupiter-api</artifactId>
+          <version>5.7.2</version>
+          <scope>test</scope>
+      </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
+      <version>3.11.1</version>
+      <scope>test</scope>
+    </dependency>
 
   </dependencies>
 
